analysis of tweets

--- a/company_analysis/templates/list.html
+++ b/company_analysis/templates/list.html
@@ -4,8 +4,6 @@
 <table class="table ">
     <thead>
         <tr>
-            <th scope="col">data</th>
-            <th scope="col">url</th>
             <th scope="col">texto</th>
         </tr>
     </thead>
@@ -13,13 +11,7 @@
         {% for tweet in tweets%}
         <tr>
             <td>
-                {{tweet.date}}
-            </td>
-            <td>
-                <a>{{tweet.url}}</a>
-            </td>
-            <td>
-                {{tweet.content}}
+                {{tweet}}
             </td>
         </tr>
         {% endfor %}
@@ -27,4 +19,10 @@
     </tbody>
 
 </table>
+positivo: 
+{{analysis['positive']}}
+negativo:
+{{analysis['negative']}}
+neutro:
+{{analysis['neutral']}}
 {% endblock %}
