Add graph.js and plot basic graph

--- a/company_analysis/templates/index.html
+++ b/company_analysis/templates/index.html
@@ -3,14 +3,19 @@
 {% block main %}
 
 <div class="container">
-    <h1 class="title">Análise de Empresas com IA</h1>
-    <h2 class="subtitle">Faça uma busca para obter informações sobre uma empresa</h2>
-</div>
-<div class="form-container">
-    <form action="/search" method="post">
-        <label for="nome_empresa">Digite o nome da empresa que deseja fazer a busca:</label><br>
-        <input type="text" id="nome_empresa" name="nome_empresa"><br><br>
-        <input type="submit" value="Enviar">
-    </form>
+    <div class="row">
+        <h1 class="title">Análise de Empresas com IA</h1>
+        <h2 class="subtitle">Faça uma busca para obter informações sobre uma empresa</h2>
+    </div>
+
+    <div class="form-container">
+        <form action="/search" method="post" class="form">
+            <div class="mb-3">
+                <label class="form-label" for="company_name">Digite o nome da empresa que deseja fazer a busca:</label>
+                <input type="text" class="form-control" id="company_name" name="company_name">
+            </div>
+            <input type="submit" value="Enviar">
+        </form>
+    </div>
 </div>
 {% endblock %}
