--- a/company_analysis/templates/index.html
+++ b/company_analysis/templates/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
         body {
-            background-color: rgb(136, 207, 249);
+            background-color: #1D9BF0;
             margin: 0;
             padding: 0;
         }
@@ -13,12 +13,15 @@
         .navbar {
             background-color: #333;
             padding: 10px;
+            justify-content: center;
+
         }
         
         .navbar .navbar-brand {
             color: #fff;
             font-size: 24px;
             font-weight: bold;
+            justify-content: center;
         }
         
         .navbar .btn {
@@ -43,11 +46,12 @@
         }
         
         .subtitle {
-            color: #666;
+            color: #000;
             font-family: "Arial", sans-serif;
             font-size: 18px;
             text-align: center;
             margin-bottom: 30px;
+            margin-top: 10px;
         }
         
         .form-container form {
@@ -76,13 +80,56 @@
             margin-left: auto;
             margin-right: auto;
         }
+
+        .graphic-button{
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #1DA1F2;
+            color: #fff;
+            font-size: 16px;
+            font-weight: bold;
+            text-decoration: none;
+            border-radius: 30px;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .graphic-button:hover {
+            background-color: #0D95E8;
+        }
+        
+        .send-button{
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #fff;
+            color: #1DA1F2;
+            font-size: 16px;
+            font-weight: bold;
+            text-decoration: none;
+            border-radius: 30px;
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .send-button:hover {
+            background-color: #bfddf3;
+        }
+
+        .footer{
+            background-color: rgba(0, 0, 0, 0.9);
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+            margin-top: auto;
+            display: inline;
+        }
     </style>
 </head>
 <body>
     <nav class="navbar">
         <a class="navbar-brand" href="#">Análise de Empresas com IA</a>
         <form class="d-flex" action="/outra-pagina.html">
-            <button class="btn" type="submit">Gráficos</button>
+            <button class="graphic-button" type="submit">Gráficos</button>
         </form>
     </nav>
     
@@ -108,44 +155,59 @@
                     <label for="nome_empresa" class="form-label">Digite o nome da empresa que deseja fazer a busca:</label>
                     <input type="text" class="form-control" id="nome_empresa" name="nome_empresa">
                 </div>
-                <div class="text-center">
-                    <button type="submit" class="btn btn-primary">Enviar</button>
+                <div class="mb-3">
+                    <button class="send-button" type="submit">Enviar</button>
                 </div>
             </form>
         </div>
     </div> 
- <!-  Logo ->
+
  <style>
     .logos-bar {
-        background-color: #000;
-        padding: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .logos-bar img {
-        height: 40px;
-        margin: 0 10px;
-    }
+            background-color: #000;
+            padding: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: auto;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+        }
+    
+        .logos-bar img {
+            height: 40px;
+            margin: 0 10px;
+        }
 </style>
 
-<div class="logos-bar">
-    <a href="https://www.google.com" target="_blank">
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Logo Google">
-    </a>
-    <a href="https://www.microsoft.com" target="_blank">
-        <img src="https://logo.clearbit.com/microsoft.com" alt="Logo Microsoft">
-    </a>
-    <a href="https://www.facebook.com" target="_blank">
-        <img src="https://logo.clearbit.com/facebook.com" alt="Logo Facebook">
-    </a>
-    <a href="https://www.amazon.com" target="_blank">
-        <img src="https://logo.clearbit.com/amazon.com" alt="Logo Amazon">
-    </a>
-    <a href="https://www.apple.com" target="_blank">
-        <img src="https://logo.clearbit.com/apple.com" alt="Logo Apple">
-    </a>
 </div>
 </body>
+
+<section class="">
+    <div class="logos-bar">
+        <a href="https://www.google.com" target="_blank">
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Logo Google">
+        </a>
+        <a href="https://www.microsoft.com" target="_blank">
+            <img src="https://logo.clearbit.com/microsoft.com" alt="Logo Microsoft">
+        </a>
+        <a href="https://www.facebook.com" target="_blank">
+            <img src="https://logo.clearbit.com/facebook.com" alt="Logo Facebook">
+        </a>
+        <a href="https://www.amazon.com" target="_blank">
+            <img src="https://logo.clearbit.com/amazon.com" alt="Logo Amazon">
+        </a>
+        <a href="https://www.apple.com" target="_blank">
+            <img src="https://logo.clearbit.com/apple.com" alt="Logo Apple">
+        </a>
+    </div>
+  </section>
+</div>
+
+<div class="text-center p-3" style="background-color: rgba(0, 0, 0); color: #fff;">
+  © 2023 Copyright
+</div>
+</footer>
 </html>
