--- a/company_analysis/templates/index.html
+++ b/company_analysis/templates/index.html
@@ -13,12 +13,17 @@
         .navbar {
             background-color: #333;
             padding: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         
         .navbar .navbar-brand {
             color: #fff;
             font-size: 24px;
             font-weight: bold;
+            text-align: center;
+            width: 100%;
         }
         
         .navbar .btn {
@@ -43,7 +48,7 @@
         }
         
         .subtitle {
-            color: #666;
+            color: #121111;
             font-family: "Arial", sans-serif;
             font-size: 18px;
             text-align: center;
@@ -76,13 +81,31 @@
             margin-left: auto;
             margin-right: auto;
         }
+        
+        .logos-bar {
+            background-color: #000;
+            padding: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: auto;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+        }
+    
+        .logos-bar img {
+            height: 40px;
+            margin: 0 10px;
+        }
     </style>
 </head>
 <body>
     <nav class="navbar">
         <a class="navbar-brand" href="#">Análise de Empresas com IA</a>
         <form class="d-flex" action="/outra-pagina.html">
-            <button class="btn" type="submit">Gráficos</button>
+        <!-- <button class="btn" type="submit">Gráficos</button>  ( botao grafico)--> 
         </form>
     </nav>
     
@@ -109,43 +132,31 @@
                     <input type="text" class="form-control" id="nome_empresa" name="nome_empresa">
                 </div>
                 <div class="text-center">
-                    <button type="submit" class="btn btn-primary">Enviar</button>
+                    <button type="submit" class="btn btn-primary">Enviar</button>    
+                </div>
+                <div class="text-center">
+                    <a href="{{ url_for('saibamais') }}">Saiba mais</a>
                 </div>
             </form>
         </div>
-    </div> 
- <!-  Logo ->
- <style>
-    .logos-bar {
-        background-color: #000;
-        padding: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .logos-bar img {
-        height: 40px;
-        margin: 0 10px;
-    }
-</style>
-
-<div class="logos-bar">
-    <a href="https://www.google.com" target="_blank">
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Logo Google">
-    </a>
-    <a href="https://www.microsoft.com" target="_blank">
-        <img src="https://logo.clearbit.com/microsoft.com" alt="Logo Microsoft">
-    </a>
-    <a href="https://www.facebook.com" target="_blank">
-        <img src="https://logo.clearbit.com/facebook.com" alt="Logo Facebook">
-    </a>
-    <a href="https://www.amazon.com" target="_blank">
-        <img src="https://logo.clearbit.com/amazon.com" alt="Logo Amazon">
-    </a>
-    <a href="https://www.apple.com" target="_blank">
-        <img src="https://logo.clearbit.com/apple.com" alt="Logo Apple">
-    </a>
-</div>
+    </div>
+    
+    <div class="logos-bar">
+        <a href="https://www.google.com" target="_blank">
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Logo Google">
+        </a>
+        <a href="https://www.microsoft.com" target="_blank">
+            <img src="https://logo.clearbit.com/microsoft.com" alt="Logo Microsoft">
+        </a>
+        <a href="https://www.facebook.com" target="_blank">
+            <img src="https://logo.clearbit.com/facebook.com" alt="Logo Facebook">
+        </a>
+        <a href="https://www.amazon.com" target="_blank">
+            <img src="https://logo.clearbit.com/amazon.com" alt="Logo Amazon">
+        </a>
+        <a href="https://www.apple.com" target="_blank">
+            <img src="https://logo.clearbit.com/apple.com" alt="Logo Apple">
+        </a>
+    </div>
 </body>
 </html>
