--- a/company_analysis/templates/base.html
+++ b/company_analysis/templates/base.html
@@ -11,6 +11,7 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.0/dist/chart.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    {% include "navbar.html" %}
     {% block main %}
     {% endblock %}
 </body>
