--- a/company_analysis/templates/list.html
+++ b/company_analysis/templates/list.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="jumbotron mt-4">
         <h1 class="display-4">Opiniões da empresa "{{company_name}}"</h1>
-        <p class="lead">dos dias Y até Z, com limitação de A tweets</p>
+        <p class="lead">dos dias {{ since }} até {{ until }}, com limitação de {{tweet_quantity}} tweets</p>
     </div>
 
     <div class="row mt-4">
