--- a/company_analysis/templates/footer.html
+++ b/company_analysis/templates/footer.html
@@ -1,17 +1,20 @@
-<div class="logos-bar">
-    <a href="https://www.google.com" target="_blank">
-        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Logo Google">
-    </a>
-    <a href="https://www.microsoft.com" target="_blank">
-        <img src="https://logo.clearbit.com/microsoft.com" alt="Logo Microsoft">
-    </a>
-    <a href="https://www.facebook.com" target="_blank">
-        <img src="https://logo.clearbit.com/facebook.com" alt="Logo Facebook">
-    </a>
-    <a href="https://www.amazon.com" target="_blank">
-        <img src="https://logo.clearbit.com/amazon.com" alt="Logo Amazon">
-    </a>
-    <a href="https://www.apple.com" target="_blank">
-        <img src="https://logo.clearbit.com/apple.com" alt="Logo Apple">
-    </a>
-</div>
+<footer class="bg-dark">
+    <div class="logos-bar">
+        <a href="https://www.google.com" target="_blank">
+            <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+                alt="Logo Google">
+        </a>
+        <a href="https://www.microsoft.com" target="_blank">
+            <img src="https://logo.clearbit.com/microsoft.com" alt="Logo Microsoft">
+        </a>
+        <a href="https://www.facebook.com" target="_blank">
+            <img src="https://logo.clearbit.com/facebook.com" alt="Logo Facebook">
+        </a>
+        <a href="https://www.amazon.com" target="_blank">
+            <img src="https://logo.clearbit.com/amazon.com" alt="Logo Amazon">
+        </a>
+        <a href="https://www.apple.com" target="_blank">
+            <img src="https://logo.clearbit.com/apple.com" alt="Logo Apple">
+        </a>
+    </div>
+</footer>
