--- a/company_analysis/templates/paginaexplicativa.html
+++ b/company_analysis/templates/paginaexplicativa.html
@@ -8,13 +8,7 @@
     <div class="row text-center d-flex justify-content-center mb-4">
         <div class="testimonial-balloon">
             <p class="testimonial-text">
-                O Sistema funciona a partir de uma análise de tweets sobre uma determinada
-                empresa
-                que é
-                pesquisado na tela inicial.
-                A partir da pesquisa, os tweets são analisados e separados em pontos neutros, pontos positivos ou pontos
-                negativos de acordo com a Inteligencia artificial integrada
-                no projeto. Então é inspecionado e é retornado os resultados em gráficos.
+                O Sistema funciona a partir de uma análise de tweets sobre uma determinada empresa que é pesquisado na tela inicial. A partir da pesquisa, os tweets são analisados e separados em pontos neutros, pontos positivos ou pontos negativos de acordo com a Inteligencia artificial integrada no projeto. Então é inspecionado e é retornado os resultados em gráficos.
             </p>
         </div>
     </div>
